Fixing navbar overflowing footer

--- a/frontend/src/app/shared/components/global-footer/global-footer.component.scss
+++ b/frontend/src/app/shared/components/global-footer/global-footer.component.scss
@@ -1,6 +1,5 @@
 footer {
   text-align: center;
-  margin-top: auto;
 }
 
 .terms-of-service {
